--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-DATABASE_URL=mongodb+srv://wish9919:Wish9919@cluster0.l7ixk.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+DATABASE_URL=mongodb://wish9919:Wish9919@127.0.0.1:27017/vehicle_inventory?retryWrites=true&w=majority
 PORT=8000
+SECRET_KEY=secret
+
