--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/storage": "^5.14.0",
+    "apollo-server": "^3.3.0",
     "apollo-server-express": "^3.2.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "^15.5.1",
+    "graphql-upload": "^12.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.0",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "path": "^0.12.7"
   }
 }
