--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "graphql": "^15.5.1",
     "graphql-upload": "^12.0.0",
     "jsonwebtoken": "^8.5.1",
+    "mongo-seeding": "^3.7.0",
+    "mongodb": "^4.1.1",
     "mongoose": "^6.0.0",
     "nodemon": "^2.0.12",
     "path": "^0.12.7"
