--- a/package.json
+++ b/package.json
@@ -12,18 +12,24 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/storage": "^5.14.0",
+    "@graphql-tools/schema": "^8.2.0",
     "apollo-server": "^3.3.0",
     "apollo-server-express": "^3.2.0",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^3.5.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "^15.5.1",
+    "graphql-subscriptions": "^1.2.1",
     "graphql-upload": "^12.0.0",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "luxon": "^2.0.2",
     "mongo-seeding": "^3.7.0",
     "mongodb": "^4.1.1",
     "mongoose": "^6.0.0",
     "nodemon": "^2.0.12",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "subscriptions-transport-ws": "^0.9.19"
   }
 }
